# iot-api

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  commitlint.config.js  docker-compose-dev.yml  pyproject.toml  setup.sh
.github/workflows/: build.yml  deploy.yml  main.yml
config/: .env.example  Dockerfile  docker-compose-dev-override.yml  docker-compose.yml  traefik.yml
config/mqtt/: mosquitto.conf
iot_api/clients/: mqtt.py  redis.py
iot_api/core/: app.py  config.py  lifespan.py
iot_api/dependencies/: auth.py  mqtt.py  redis.py
iot_api/helpers/: devices.py  jwt.py  logger.py  mqtt.py
iot_api/routes/: oauth.py  smart_home.py
iot_api/schemas/: devices.py
iot_api/services/: command.py  oauth.py  status.py
iot_api/services/devices/: base.py  coffee_maker.py  coffee_maker_ready_sensor.py  led.py  registry.py
mqtt/config/: entrypoint.sh  mosquitto.conf
